cluster/core/flux-system/webhook/github/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
          scheme: http
  tls:
    secretName: "flux-${SECRET_DOMAIN/./-}-tls"
